--- a/vxkblog/templates/blog/includes/comments.html
+++ b/vxkblog/templates/blog/includes/comments.html
@@ -28,7 +28,7 @@
 						{{ comment.userinfo.name|title }}
 						{% endif %}
 					</span>
-					<span>{{ comment.submit_date|date:"jS F Y" }}</span>
+					<span class="date">,{{ comment.submit_date }}</span>
 				</p>
 			</li>
 		{% endfor %}
