--- a/vxkblog/templates/blog/entry_by_tag.html
+++ b/vxkblog/templates/blog/entry_by_tag.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
 {% load blogutils typogrify i18n %}
 
 {% block title %}{% trans "Blog entries witg tag" %} {{ tag }}{% endblock %}
@@ -11,6 +11,7 @@
 {% block bodyclass %}{{ block.super }} sidebared{% endblock %}
 
 {% block content %}
+<div id="content">
 	<div id="entries">
 		<ul>
 			{% for blog in blogs %}
@@ -22,6 +23,7 @@
 	</div>
 	
 	{% yearswithblogs %}
+</div>
 	
 	{% include "blog/includes/tagcloud_sidebar.html" %}
 {% endblock %}
