fixed blog info position swapped author and publish date in bloginfo tag

--- a/vxkblog/templates/blog/entry_archive_year.html
+++ b/vxkblog/templates/blog/entry_archive_year.html
@@ -16,7 +16,7 @@
 		{% if entries %}
 		<ul>
 			{% for blog in entries %}
-			<li class="{% cycle odd,even %}">
+			<li class="{% cycle odd,even %} relative">
 				{% bloginfo blog %}
 			</li>
 			{% endfor %}
