--- a/vxkblog/templates/blog/entry_detail.html
+++ b/vxkblog/templates/blog/entry_detail.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <div id="content">
-	<div id="entry">
+	<div id="entry" class="relative">
 		<h2>{{ entry.title|smartypants|widont }}</h2>
 		
 		{% blogmeta entry %}
