--- a/vxkblog/static/css/vxk-blog.css
+++ b/vxkblog/static/css/vxk-blog.css
@@ -1,3 +1,3 @@
-.blogannoce_item { position: relative; }
+.relative { position: relative; }
 .bloginfo { position: absolute; right: 0px; top: 0px;}
 .publishdate { font-style: italic; font-size: 10px; }
