--- a/vxkblog/templates/blog/entry_by_tag.html
+++ b/vxkblog/templates/blog/entry_by_tag.html
@@ -15,7 +15,7 @@
 	<div id="entries">
 		<ul>
 			{% for blog in blogs %}
-			<li class="{% cycle odd,even %}">
+			<li class="{% cycle odd,even %} relative">
 				{% bloginfo blog %}
 			</li>
 			{% endfor %}
