header in blog index translated

--- a/vxkblog/templates/blog/entry_index.html
+++ b/vxkblog/templates/blog/entry_index.html
@@ -11,7 +11,7 @@
 
 {% block content %}
 <div id="content">
-	<h2>Blogs</h2>
+	<h2>{% trans "entries" %}</h2>
 	<div id="newestblogs">
 		{% newestblogs 6 %}
 	</div>
