--- a/vxkblog/templates/blog/entry_index.html
+++ b/vxkblog/templates/blog/entry_index.html
@@ -12,7 +12,7 @@
 {% block content %}
 <div id="content">
 	<h2>{% trans "entries" %}</h2>
-	<div id="newestblogs">
+	<div id="entrylist">
 		{% newestblogs 6 %}
 	</div>
 	
