--- a/vxkblog/static/css/vxk-blog.css
+++ b/vxkblog/static/css/vxk-blog.css
@@ -1,3 +1,10 @@
 .relative { position: relative; }
-.bloginfo { position: absolute; right: 0px; top: 0px;}
+/*.bloginfo { position: absolute; right: 0px; top: 0px;} */
 .publishdate { font-style: italic; font-size: 10px; }
+.bloginfo { margin-bottom: 20px; }
+
+#entry .avatar { position: absolute; right: 0px; top: 0px;
+box-shadow: 2px 2px 3px #222; }
+
+.previousentry { float: left; }
+.nextentry { float: right; }
