--- a/vxkblog/templates/blog/tag_newestblogs.html
+++ b/vxkblog/templates/blog/tag_newestblogs.html
@@ -1,11 +1,12 @@
 
 {% for blog in blogs %}
-<div class="relative">
-	<a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a>
-	<p>{{ blog.standfirst }}</p>
-	<div class="bloginfo">
+<div>
+	<div>
+		<a href="{{ blog.get_absolute_url }}">{{ blog.title }}</a>
 		<span class="author">{{ blog.author }}</span>
 		<span class="publishdate">{{ blog.created_at }}</span>
 	</div>
+	
+	<p class="standfirst">{{ blog.standfirst }}</p>	
 </div>
 {% endfor %}
