templates organization change

--- a/vxkblog/templates/blog/entry_by_tag.html
+++ b/vxkblog/templates/blog/entry_by_tag.html
@@ -25,6 +25,8 @@
 	
 	{% yearswithblogs %}
 </div>
-	
-	{% include "blog/includes/tagcloud_sidebar.html" %}
+{% endblock %}
+
+{% block sidebar %}{{ block.super }}
+{% include "blog/includes/tagcloud.html" %}
 {% endblock %}
