--- a/vxkblog/templates/blog/entry_index.html
+++ b/vxkblog/templates/blog/entry_index.html
@@ -19,8 +19,9 @@
 	{% yearswithblogs %}
 
 </div>
+{% endblock %}
 
-{% include "blog/includes/tagcloud_sidebar.html" %}
-
+{% block sidebar %}{{ block.super }}
+{% include "blog/includes/tagcloud.html" %}
 {% endblock %}
 
