--- a/vxkblog/templates/blog/tag_randomblogs.html
+++ b/vxkblog/templates/blog/tag_randomblogs.html
@@ -1,12 +1,13 @@
 {% load blogutils i18n %}
 
 <h3>{% trans 'Selected blogs' %}:</h3>
-<div class="randomItems">
 {% for b in blogs %}
+<div class="blogAnounce">
 	<a href="{{ b.get_absolute_url }}">{{ b.title }}</a>
 	<div class="publishdate">{{ b.created_at }}</div>
 	{% blogimage b %}
 	<p>{{ b.standfirst }}</p>
 	<p><a href="{{ b.get_absolute_url }}">{% trans 'More' %}...</a></p>
-{% endfor %}
 </div>
+{% endfor %}
+<br class="clearfix" />
